--- a/style.css
+++ b/style.css
@@ -1,1 +1,45 @@
 	
+[class*='col-'] {
+    float: left;
+}
+.col-12 {width : 100%;}
+.col-11 {width : 91.67%;}
+.col-10 {width : 83.33%; position : center}
+.col-9 {width : 75%;}
+.col-8 {width : 66.67%;}
+.col-7 {width : 58.33%;}
+.col-6 {width : 50%;}
+.col-5 {width : 41.67%;}
+.col-4 {width : 33.33%;}
+.col-3 {width : 25%;}
+.col-2 {width : 16.67%;}
+.col-1 {width : 8.33%;}
+
+ul {
+    list-style-type: none;
+    color: #3399FF;
+    margin: 0;
+    float: left;
+    padding: 10;
+}
+
+/* unvisited link */
+a:link {
+    color: #3399FF;
+}
+
+/* visited link */
+a:visited {
+    color: #3399FF;
+}
+
+/* mouse over link */
+a:hover {
+    color: #FF9900;
+}
+
+/* selected link */
+a:active {
+    color: #FF9900;
+}
+
